fix: selected interactable feedback not working

--- a/Assets/WebGLTemplates/GameTemplate/index.html
+++ b/Assets/WebGLTemplates/GameTemplate/index.html
@@ -10,9 +10,15 @@
 
 <body>
     <canvas id="game-canvas"></canvas>
-    <div id="loading" class="loading">
-        <div id="loading-bar" class="loading-bar-field">
-            <div id="loading-progress" class="loading-bar-fill"></div>
+    <div style="height: 100%; width: 100%;">
+        <div style="height: 50%; display: flex; align-items: flex-end;">
+            <div class="loading-text">CARREGANDO</div>
+        </div>
+    
+        <div id="loading" class="loading">
+            <div id="loading-bar" class="loading-bar-field">
+                <div id="loading-progress" class="loading-bar-fill"></div>
+            </div>
         </div>
     </div>
     <script>
