improv: add meta tags to webgl template and change website icon

--- a/Assets/WebGLTemplates/GameTemplate/index.html
+++ b/Assets/WebGLTemplates/GameTemplate/index.html
@@ -3,9 +3,16 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Ruan Lucas GD</title>
+    <title>Game Developer Portfólio</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfólio de Gamedev, Programador C# e Unity Developer. Veja meus trabalhos no mundo dos jogos.">
+    <meta name="keywords" content="Gamedev, Programador C#, Unity Dev, Jogos, Jogos Mobile, PC, Steam">
+    <meta name="author" content="Ruan Lucas">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
 </head>
 
 <body>
@@ -129,7 +136,7 @@
                 devicePixelRatio: pixelRatio,
             };
 
-             script.onload = () => {
+            script.onload = () => {
                 createUnityInstance(gameScreen, config, (progress) => {
 
                     progress.textContent = (Math.round(progress * 100)) + "%";
